--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/HuEric/traveling-salesman-solver#readme",
   "dependencies": {
+    "@google/maps": "^0.4.5",
+    "bluebird": "^3.5.1",
     "express": "^4.16.3",
     "ps-grab": "^1.0.1"
   }
